# LoL-ML-Pipeline

./: .gitignore  README.md  dockerfile  pyproject.toml
data_ingest/loaders/: load_data.py
notebooks/: test.ipynb  training_fix.ipynb  training_notebook.ipynb
notebooks/.ipynb_checkpoints/: test-checkpoint.ipynb
src/training/models/: train.py
tests/unit/load_data/: test_load_data.py
