[project]
name = "lol_ml_pipeline"
version = "0.1.0"
description = "League of Legends Win Prediction Model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.5.3",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pytest>=9.0.2",
    "tensorflow>=2.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["data_ingest*", "src*"]